mejorando la calculadora

--- a/Calculadora/calculadora.html
+++ b/Calculadora/calculadora.html
@@ -9,66 +9,66 @@
     <body>
         <div id="contenedor">
             <div class="pantalla">
-                <input type="text" maxlength="13" value="0" disabled>
+                <input id="resultado" type="text" maxlength="13" value="0" disabled>
             </div>
-            <div class="boton">
+            <div class="boton" id="C">
                 C
             </div>
-            <div class="boton">
+            <div class="boton" id="%">
                 %
             </div>
             <div class="boton">
                 &laquo;
             </div>
-            <div class="boton">
+            <div class="boton" id="/">
                 /
             </div>
-            <div class="boton">
+            <div class="boton" id="7">
                 7
             </div>
-            <div class="boton">
+            <div class="boton" id="8">
                 8
             </div>
-            <div class="boton">
+            <div class="boton" id="9">
                 9
             </div>
-            <div class="boton">
+            <div class="boton" id="x">
                 x
             </div>
-            <div class="boton">
+            <div class="boton" id="4">
                 4
             </div>
-            <div class="boton">
+            <div class="boton" id="5">
                 5
             </div>
-            <div class="boton">
+            <div class="boton" id="6">
                 6
             </div>
-            <div class="boton">
+            <div class="boton" id="-">
                 -
             </div>
-            <div class="boton">
+            <div class="boton" id="1">
                 1
             </div>
-            <div class="boton">
+            <div class="boton" id="2">
                 2
             </div>
-            <div class="boton">
+            <div class="boton" id="3">
                 3
             </div>
-            <div class="boton">
+            <div class="boton" id="+">
                 +
             </div>
-            <div class="boton infIzq">
+            <div class="boton infIzq" id="0">
                 0
             </div>
-            <div class="boton">
+            <div class="boton" id=".">
                 .
             </div>
-            <div class="boton">
+            <div class="boton" id="()">
                 ()
             </div>
-            <div class="boton infDer">
+            <div class="boton infDer" id="=">
                 =
             </div>
             <div style="clear:both"></div>
