Hacer la calculadora

--- a/Calculadora/calculadora.html
+++ b/Calculadora/calculadora.html
@@ -1,77 +1,80 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>calculadora</title>
-        <link rel="stylesheet" type="text/css" media="screen" href="calculadora.css" />
-        <script src="calculadora.js"></script>
-    </head>
-    <body>
-        <div id="contenedor">
-            <div class="pantalla">
-                <input id="resultado" type="text" maxlength="13" value="0" disabled>
-            </div>
-            <div class="boton" id="C">
-                C
-            </div>
-            <div class="boton" id="%">
-                %
-            </div>
-            <div class="boton">
-                &laquo;
-            </div>
-            <div class="boton" id="/">
-                /
-            </div>
-            <div class="boton" id="7">
-                7
-            </div>
-            <div class="boton" id="8">
-                8
-            </div>
-            <div class="boton" id="9">
-                9
-            </div>
-            <div class="boton" id="x">
-                x
-            </div>
-            <div class="boton" id="4">
-                4
-            </div>
-            <div class="boton" id="5">
-                5
-            </div>
-            <div class="boton" id="6">
-                6
-            </div>
-            <div class="boton" id="-">
-                -
-            </div>
-            <div class="boton" id="1">
-                1
-            </div>
-            <div class="boton" id="2">
-                2
-            </div>
-            <div class="boton" id="3">
-                3
-            </div>
-            <div class="boton" id="+">
-                +
-            </div>
-            <div class="boton infIzq" id="0">
-                0
-            </div>
-            <div class="boton" id=".">
-                .
-            </div>
-            <div class="boton" id="()">
-                ()
-            </div>
-            <div class="boton infDer" id="=">
-                =
-            </div>
-            <div style="clear:both"></div>
+
+<head>
+    <meta charset="utf-8" />
+    <title>calculadora</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="calculadora.css" />
+    <script src="calculadora.js"></script>
+</head>
+
+<body>
+    <div id="contenedor">
+        <div class="pantalla">
+            <input id="resultado" type="text" maxlength="13" value="0" disabled>
         </div>
-    </body>
+        <div class="boton" id="resetear">
+            C
+        </div>
+        <div class="boton" id="procentaje">
+            %
+        </div>
+        <div class="boton" id="borrar">
+            &laquo;
+        </div>
+        <div class="boton" id="division">
+            /
+        </div>
+        <div class="boton" id="siete">
+            7
+        </div>
+        <div class="boton" id="ocho">
+            8
+        </div>
+        <div class="boton" id="nueve">
+            9
+        </div>
+        <div class="boton" id="multiplicar">
+            x
+        </div>
+        <div class="boton" id="cuatro">
+            4
+        </div>
+        <div class="boton" id="cinco">
+            5
+        </div>
+        <div class="boton" id="seis">
+            6
+        </div>
+        <div class="boton" id="resta">
+            -
+        </div>
+        <div class="boton" id="uno">
+            1
+        </div>
+        <div class="boton" id="dos">
+            2
+        </div>
+        <div class="boton" id="tres">
+            3
+        </div>
+        <div class="boton" id="suma">
+            +
+        </div>
+        <div class="boton infIzq" id="cero">
+            0
+        </div>
+        <div class="boton" id="punto">
+            .
+        </div>
+        <div class="boton" id="parentesis">
+            ()
+        </div>
+        <div class="boton infDer" id="igual">
+            =
+        </div>
+        <div style="clear:both"></div>
+    </div>
+</body>
+
 </html>
