+ Mejorar la calculadora

--- a/Calculadora/calculadora.html
+++ b/Calculadora/calculadora.html
@@ -19,7 +19,7 @@
         <div class="boton" id="procentaje">
             %
         </div>
-        <div class="boton" id="borrar">
+        <div class="boton" id="eliminar">
             &laquo;
         </div>
         <div class="boton" id="division">
