+ Haciendo el reproductor

--- a/ReproductorVideo/reproductor.html
+++ b/ReproductorVideo/reproductor.html
@@ -18,6 +18,7 @@
 
 <body>
 
+
     <section id="reproductor">
 
         <h1>Reproductor de Videos Online</h1>
@@ -35,14 +36,32 @@
 
         <div id="barra">
 
-            <div class="boton"></div>
+            <button id="silenciar" class="boton"></button>
+            <button id="retroceder" class="boton"></button>
+            <button id="play" class="boton"></button>
+            <button id="avanzar" class="boton"></button>
+            <button id="rebobinar" class="boton"></button>
+            <button id="menos" class="boton"></button>
+            <button id="mas" class="boton"></button>
 
 
         </div>
 
     </section>
 
-    <section id="listavideos"></section>
+    <section id="listavideos">
+
+        <div class="videos"></div>
+        <div class="videos"></div>
+        <div class="videos"></div>
+        <div class="videos"></div>
+        <div class="videos"></div>
+        <div class="videos"></div>
+
+
+    </section>
+
+
 
 </body>
 
