+ Hecho la funcionalidad del reproductor

--- a/ReproductorVideo/reproductor.html
+++ b/ReproductorVideo/reproductor.html
@@ -26,7 +26,7 @@
 
         <div id="video">
 
-            <video>
+            <video width="750">
 
                 <source src="videos/laresistencia.mp4" type="video/mp4">
 
