--- a/ReproductorVideo/reproductor.html
+++ b/ReproductorVideo/reproductor.html
@@ -51,12 +51,30 @@
 
     <section id="listavideos">
 
-        <div class="videos"></div>
-        <div class="videos"></div>
-        <div class="videos"></div>
-        <div class="videos"></div>
-        <div class="videos"></div>
-        <div class="videos"></div>
+        <div class="videos">
+            <video height="99" width="440" >
+                <source src="videos/laresistencia2.mp4" type="video/mp4">
+            </video>
+        </div>
+
+        <div class="videos">
+            <video height="99" width="440" >
+                <source src="videos/laresistencia3.mp4" type="video/mp4">
+            </video>
+        </div>
+
+        <div class="videos">
+            <video height="99" width="440" >
+                <source src="videos/laresistencia4.mp4" type="video/mp4">
+            </video>
+        </div>
+
+        <div class="videos">
+            <video height="99" width="440" >
+                <source src="videos/laresistencia5.mp4" type="video/mp4">
+            </video>
+        </div>
+       
 
 
     </section>
