+ Hecho el banner de publicidad

--- a/ReproductorVideo/reproductor.html
+++ b/ReproductorVideo/reproductor.html
@@ -24,7 +24,7 @@
         <h1>Reproductor de Videos Online</h1>
 
 
-        <div id="video">
+        <div id="multimedia">
 
             <video width="750">
 
@@ -52,29 +52,29 @@
     <section id="listavideos">
 
         <div class="videos">
-            <video height="99" width="440" >
+            <video height="150">
                 <source src="videos/laresistencia2.mp4" type="video/mp4">
             </video>
         </div>
 
         <div class="videos">
-            <video height="99" width="440" >
+            <video height="150">
                 <source src="videos/laresistencia3.mp4" type="video/mp4">
             </video>
         </div>
 
         <div class="videos">
-            <video height="99" width="440" >
+            <video height="150">
                 <source src="videos/laresistencia4.mp4" type="video/mp4">
             </video>
         </div>
 
         <div class="videos">
-            <video height="99" width="440" >
+            <video height="150">
                 <source src="videos/laresistencia5.mp4" type="video/mp4">
             </video>
         </div>
-       
+
 
 
     </section>
