--- a/ReproductorVideo/reproductor.html
+++ b/ReproductorVideo/reproductor.html
@@ -26,11 +26,7 @@
 
         <div id="multimedia">
 
-            <video width="750">
-
-                <source src="videos/laresistencia.mp4" type="video/mp4">
-
-            </video>
+            <video width="750" src="videos/laresistencia.mp4"></video>
 
         </div>
 
@@ -52,27 +48,19 @@
     <section id="listavideos">
 
         <div class="videos">
-            <video height="150">
-                <source src="videos/laresistencia2.mp4" type="video/mp4">
-            </video>
+            <video height="150" src="videos/laresistencia2.mp4"></video>
         </div>
 
         <div class="videos">
-            <video height="150">
-                <source src="videos/laresistencia3.mp4" type="video/mp4">
-            </video>
+            <video height="150" src="videos/laresistencia3.mp4"></video>
         </div>
 
         <div class="videos">
-            <video height="150">
-                <source src="videos/laresistencia4.mp4" type="video/mp4">
-            </video>
+            <video height="150" src="videos/laresistencia4.mp4"></video>
         </div>
 
         <div class="videos">
-            <video height="150">
-                <source src="videos/laresistencia5.mp4" type="video/mp4">
-            </video>
+            <video height="150" src="videos/laresistencia5.mp4"></video>
         </div>
 
 
