+ haciendo los draggables

--- a/FichajesFutbol/index.html
+++ b/FichajesFutbol/index.html
@@ -16,15 +16,25 @@
 <body>
     <div id="campo">
 
+        <div class="porteria">
+            <div class="jugador"></div>
+        </div>
+
+        <div class="defensa">
+            <div class="jugador"></div>
+            <div class="jugador"></div>
+            <div class="jugador"></div>
+            <div class="jugador"></div>
+        </div>
+        
+       <div class="centro">
         <div class="jugador"></div>
         <div class="jugador"></div>
         <div class="jugador"></div>
         <div class="jugador"></div>
-        <div class="jugador"></div>
-        <div class="jugador"></div>
-        <div class="jugador"></div>
-        <div class="jugador"></div>
-        <div class="jugador"></div>
+       </div>
+        
+        <div class="delantero"></div>
         <div class="jugador"></div> 
         <div class="jugador"></div>
 
